# CerebroVial

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  CLAUDE.md  DOCUMENTACION.md  README.md  diagrama_vial.html  diagrama_vial_2.html  docker-compose.dev.yml  docker-compose.yml  generate_evidence.py  pyproject.toml  requirements-dev.txt  tasks.py  tmp_docx_output.txt  tmp_docx_utf8.txt  tmp_read_docx.py
.github/workflows/: ci.yml
Backend/: README.md
CerebroVial/: .coverage  Dockerfile
CerebroVial/models/: traffic_rf_class_15min.joblib  traffic_rf_class_30min.joblib  traffic_rf_class_45min.joblib  traffic_rf_class_current.joblib  traffic_rf_reg_15min.joblib  traffic_rf_reg_30min.joblib  traffic_rf_reg_45min.joblib  traffic_rf_reg_current.joblib
CerebroVial/scripts/: run_prediction.py
Frontend/: vite.config.ts
core_management_api/: Dockerfile  entrypoint.sh  requirements.txt
core_management_api/alembic/: env.py
core_management_api/conf/: config_models.py
core_management_api/src/: main.py
documentation/: motor_adaptativo_teoria.md
edge_device/: Dockerfile
frontend_ui/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
ia_prediction_service/: .gitignore  Dockerfile  README.md  requirements.txt
scratch/: extract_thesis.py
scripts/: cleanup_jira.py  seed.py
shared/: pyproject.toml
shared/cerebrovial_shared/: lfs_check.py  utils.py
shared/cerebrovial_shared/config/: manager.py
shared/cerebrovial_shared/database/: __init__.py  database.py  models.py
shared/tests/: test_lfs_check.py
(+421 files in other folders)
